--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,9 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/overview   , roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/create_person, roles: ROLE_USER }
 
 when@test:
     security:
